--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,7 @@ jobs:
         working-directory: .
         run: |
           docker login -u $env:USER -p $env:TOKEN
-          docker build .
-          docker tag fretje/crystalreportsruntime:latest
+          docker build -t fretje/crystalreportsruntime:latest .
           docker image push fretje/crystalreportsruntime:latest
           docker logout
         env:
