--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: windows-2019
     steps:
       - uses: actions/checkout@master
+        with:
+          lfs: true
       - name: Build and push console
         working-directory: .
         run: |
